# AI_CPlus

./: README.md
东南大学/: README.md
东南大学/D01HTT协议与爬虫/: 3_HTTP协议与访问模块开发_HTTP协议.ipynb  3_HTTP协议与访问模块开发_访问模块.ipynb  8_02常用爬虫框架与平台使用_ScraPy_高级04Request与Response.ipynb
东南大学/D02机器学习与深度学习/: 逻辑回归.ipynb
东南大学/D02机器学习与深度学习/Torch基础/: 02Tensor-01Tensor的基本属性.ipynb  02Tensor-02Tensor的基本操作-索引与切片.ipynb  02Tensor-04Tensor的数据操作.ipynb  02Tensor-05Tensor的创建函数与全局静态函数.ipynb  02Tensor-06Tensor的数学运算.ipynb
东南大学/D02机器学习与深度学习/Torch深度学习模型/: 01Torch编程模式-02封装的常见机器学习的函数运算.ipynb
东南大学/D03经典卷积神经网络/: TORCH01_AlexNet .ipynb  TORCH02_数据集.ipynb  TORCH03_数据集加载中的格式转换.ipynb  TORCH04_使用目录构建数据集.ipynb  TORCH07_ResNet残差网络.ipynb  TORCH11_EfficientNet网络应用.ipynb  YOLO01_构建模型.ipynb
东南大学/D2机器学习与深度学习/Torch基础/: 01Torch入门-01Tensor与Stroage构造器.ipynb  02Tensor-03Tensor的基本操作-函数.ipynb  02Tensor-07Tensor的导数与自动求导.ipynb
东南大学/D2机器学习与深度学习/Torch深度学习模型/: 01Torch编程模式-01梯度下降算法与线性回归实现.ipynb  01Torch编程模式-03损失函数与逻辑回归实现.ipynb  01Torch编程模式-04Torch两种实现方式与框架结构说明.ipynb  01Torch编程模式-05Torch的Module封装.ipynb
山东大学/: README.md  环境下载与安装.ipynb
山东大学/.ipynb_checkpoints/: Day01笔记-checkpoint.ipynb  QT与OpenCV的三种编译脚本-checkpoint.ipynb  环境下载-checkpoint.ipynb  环境下载与安装-checkpoint.ipynb  环境安装-checkpoint.ipynb
山东大学/Day01资料/01lib_dll/: Cython_01Window的静态库.ipynb  Cython_02Window的动态库.ipynb  Cython_03修饰名与动态库导出.ipynb
山东大学/Day01资料/02makefile_qt_opencv_torch/: CVMakefile  Makefile  QTMakefile  TorchMakefile  main.exp  main.ilk  opencv.cpp  qt.cpp  qt_opencv_torch.cpp  torch.cpp
山东大学/Day04资料/c07_test/: CMakeLists.txt  build.bat  main.cpp
(+215 files in other folders)
